--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -23,11 +23,10 @@
   </head>
 
   <body>
-    <nav class="navbar">
-      <a href="/">Bulletin Board</a>
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+      <a class="navbar-brand" href="/">Bulletin Board</a>
+        <a class="nav-link" href="/boards">All boards</a>
     </nav>
-
-    <hr>
 
     <% if notice.present? %>
       <div style="color: green">
