--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -23,7 +23,7 @@
   </head>
 
   <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <nav class="navbar navbar-expand-lg bg-light">
       <a class="navbar-brand" href="/">Bulletin Board</a>
         <a class="nav-link" href="/boards">All boards</a>
     </nav>
