--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -23,9 +23,11 @@
   </head>
 
   <body>
-    <nav class="navbar navbar-expand-lg bg-light">
-      <a class="navbar-brand" href="/">Bulletin Board</a>
+    <nav class="navbar navbar-expand-lg bg-light mb-5">
+      <div class="container justify-content-start">
+        <a class="navbar-brand" href="/">Bulletin Board</a>
         <a class="nav-link" href="/boards">All boards</a>
+      </div>
     </nav>
 
     <% if notice.present? %>
