--- a/app/views/boards/index.html.erb
+++ b/app/views/boards/index.html.erb
@@ -9,7 +9,7 @@
               All boards
             </h6>
 
-            <button type="button" class="btn btn-outline-success" data-bs-toggle="modal" data-bs-target="#insertBoardModal">
+            <button type="button" class="btn btn-outline-success btn-sm ms-auto" data-bs-toggle="modal" data-bs-target="#insertBoardModal">
               Add a new board
             </button>
           </div>
@@ -37,7 +37,7 @@
                 </form>
               </div>
               <div class="modal-footer">
-                <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
+                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
               </div>
             </div>
           </div>
@@ -45,9 +45,12 @@
         <ul class="list-group list-group-flush">
           <% @list_of_boards.each do |a_board| %>
             <li class="list-group-item list-group-item-action">
-              <a class="link-dark underline-opacity-0" href="/boards/<%= a_board.id %>">
-                <%= a_board.name %>
-              </a>
+              <div class="d-flex justify-content-between">
+                <a class="link-dark underline-opacity-0" href="/boards/<%= a_board.id %>">
+                  <%= a_board.name %>
+                </a>
+                <i class="fa-solid fa-chevron-right"></i>
+              </div>
             </li>
           <% end %>
         </ul>
