--- a/app/views/boards/show.html.erb
+++ b/app/views/boards/show.html.erb
@@ -53,34 +53,39 @@
 
 <ul class="nav nav-tabs nav-fill" id="myTab" role="tablist">
     <li class="nav-item" role="presentation">
-      <button class="nav-link active" id="active-tab" data-bs-toggle="tab" data-bs-target="#active-posts" type="button" role="tab" aria-controls="active-posts" aria-selected="true">Active posts</button>
+      <button class="nav-link active" id="active-tab" data-bs-toggle="tab" data-bs-target="#active-posts" type="button" role="tab" aria-controls="active-posts" aria-selected="true">Active posts (<%= @active_posts.length%>)</button>
     </li>
     <li class="nav-item" role="presentation">
-      <button class="nav-link" id="expired-tab" data-bs-toggle="tab" data-bs-target="#expired-posts" type="button" role="tab" aria-controls="expired posts" aria-selected="false">Expired posts</button>
+      <button class="nav-link" id="expired-tab" data-bs-toggle="tab" data-bs-target="#expired-posts" type="button" role="tab" aria-controls="expired-posts" aria-selected="false">Expired posts (<%= @expired_posts.length%>)</button>
     </li>
 </ul>
 
-<table border="1">
-  <tr>
-    <th>Title</th>
-    <th>Body</th>
-    <th>Posted on</th>
-    <th>Expires on</th>
-  </tr>
+<div class="tab-content">
+  <div class="tab-pane active" id="active-posts" role="tabpanel" aria-labelledby="active-tab" tabindex="0">
+    <div class="row row-cols-1 row-cols-md-4">
+    <% @active_posts.each do |a_post| %>
+      <div class="col">
+        <div class="card">
+          <div class="card-header">
+            <h6>
+              <%= a_post.title %>
+            </h6>
+            Expires on <%= a_post.expires_on.strftime("%b %e, %Y") %>
+          </div>
+          <div class="card-body">
+            <%= a_post.body %>
+          </div>
+          <div class="card-footer">
+            Posted on <%= a_post.created_at.strftime("%b %e, %Y") %>
+          </div>
+        </div>
+      </div>
+    <% end %>
+    </div>
+  </div>
+</div>
 
-  <% @active_posts.each do |a_post| %>
-    <tr>
-      <td><%= a_post.title %></td>
-      <td><%= a_post.body %></td>
-      <td><%= a_post.created_at.strftime("%b %e, %Y") %></td>
-      <td><%= a_post.expires_on.strftime("%b %e, %Y") %></td>
-    </tr>
-  <% end %>
-</table>
-
-<h2>Expired posts</h2>
-
-<table border="1">
+<table class="table table-striped" border="1">
   <tr>
     <th>Title</th>
     <th>Body</th>
