--- a/app/views/boards/show.html.erb
+++ b/app/views/boards/show.html.erb
@@ -1,104 +1,110 @@
-<div>
-  <div class="d-flex justify-content-between">
-    <h1>
-      <%= @the_board.name %>
-    </h1>
-    <button type="button" class="btn btn-outline-success btn-sm ms-auto" data-bs-toggle="modal" data-bs-target="#newPostModal">
-      Add new post
-    </button>
-  </div>
-</div>
-
-<div class="modal fade" id="newPostModal">
-  <div class="modal-dialog" role="document">
-    <div class="modal-content">
-      <div class="modal-header">
-          <h5 class="modal-title" id="newBoardModal">New post</h5>
-          <button class="btn-close" data-bs-dismiss="modal"></button>
-      </div>
-      <div class="modal-body">
-        <form action="/insert_post" method="post">
-          <div class="mb-3">
-            <label for="title_box">
-              Title
-            </label>
-            <input type="text" id="title_box" name="query_title" class="form-control">
-          </div>
-          <div class="mb-3">
-            <label for="body_box">
-              Body
-            </label>
-            <textarea id="body_box" name="query_body" rows="3" class="form-control"></textarea>
-          </div>
-          <div class="mb-3">
-            <label for="expires_on_box">
-              Expires on
-            </label>
-            <input type="date" id="expires_on_box" name="query_expires_on" class="form-control">
-          </div>
-          <input type="hidden" id="board_id_box" name="query_board_id" value="<%= @the_board.id %>">
-          <div class="d-grid">
-            <button class="btn btn-primary">
-              Add post
-            </button>
-          </div>
-        </form>
-      </div>
-      <div class="modal-footer">
-        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
-      </div>
+<div class="container">
+  <div>
+    <div class="d-flex justify-content-between">
+      <h1>
+        <%= @the_board.name %>
+      </h1>
+      <button type="button" class="btn btn-outline-success" data-bs-toggle="modal" data-bs-target="#newPostModal">
+        Add new post
+      </button>
     </div>
   </div>
-</div>
 
-<ul class="nav nav-tabs nav-fill" id="myTab" role="tablist">
-    <li class="nav-item" role="presentation">
-      <button class="nav-link active" id="active-tab" data-bs-toggle="tab" data-bs-target="#active-posts" type="button" role="tab" aria-controls="active-posts" aria-selected="true">Active posts (<%= @active_posts.length%>)</button>
-    </li>
-    <li class="nav-item" role="presentation">
-      <button class="nav-link" id="expired-tab" data-bs-toggle="tab" data-bs-target="#expired-posts" type="button" role="tab" aria-controls="expired-posts" aria-selected="false">Expired posts (<%= @expired_posts.length%>)</button>
-    </li>
-</ul>
-
-<div class="tab-content">
-  <div class="tab-pane active" id="active-posts" role="tabpanel" aria-labelledby="active-tab" tabindex="0">
-    <div class="row row-cols-1 row-cols-md-4">
-    <% @active_posts.each do |a_post| %>
-      <div class="col">
-        <div class="card">
-          <div class="card-header">
-            <h6>
-              <%= a_post.title %>
-            </h6>
-            Expires on <%= a_post.expires_on.strftime("%b %e, %Y") %>
-          </div>
-          <div class="card-body">
-            <%= a_post.body %>
-          </div>
-          <div class="card-footer">
-            Posted on <%= a_post.created_at.strftime("%b %e, %Y") %>
-          </div>
+  <div class="modal fade" id="newPostModal">
+    <div class="modal-dialog" role="document">
+      <div class="modal-content">
+        <div class="modal-header">
+            <h5 class="modal-title" id="newBoardModal">New post</h5>
+            <button class="btn-close" data-bs-dismiss="modal"></button>
+        </div>
+        <div class="modal-body">
+          <form action="/insert_post" method="post">
+            <div class="mb-3">
+              <label for="title_box">
+                Title
+              </label>
+              <input type="text" id="title_box" name="query_title" class="form-control">
+            </div>
+            <div class="mb-3">
+              <label for="body_box">
+                Body
+              </label>
+              <textarea id="body_box" name="query_body" rows="3" class="form-control"></textarea>
+            </div>
+            <div class="mb-3">
+              <label for="expires_on_box">
+                Expires on
+              </label>
+              <input type="date" id="expires_on_box" name="query_expires_on" class="form-control">
+            </div>
+            <input type="hidden" id="board_id_box" name="query_board_id" value="<%= @the_board.id %>">
+            <div class="d-grid">
+              <button class="btn btn-primary">
+                Add post
+              </button>
+            </div>
+          </form>
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
         </div>
       </div>
-    <% end %>
+    </div>
+  </div>
+
+  <ul class="nav nav-tabs nav-fill" id="myTab" role="tablist">
+      <li class="nav-item" role="presentation">
+        <button class="nav-link active" id="active-tab" data-bs-toggle="tab" data-bs-target="#active-posts" type="button" role="tab" aria-controls="active-posts" aria-selected="true">Active posts (<%= @active_posts.length%>)</button>
+      </li>
+      <li class="nav-item" role="presentation">
+        <button class="nav-link" id="expired-tab" data-bs-toggle="tab" data-bs-target="#expired-posts" type="button" role="tab" aria-controls="expired-posts" aria-selected="false">Expired posts (<%= @expired_posts.length%>)</button>
+      </li>
+  </ul>
+
+  <div class="tab-content">
+    <div class="tab-pane active" id="active-posts" role="tabpanel" aria-labelledby="active-tab" tabindex="0">
+      <div class="row row-cols-1 row-cols-md-4">
+      <% @active_posts.each do |a_post| %>
+        <div class="col">
+          <div class="card">
+            <div class="card-header">
+              <h6>
+                <%= a_post.title %>
+              </h6>
+              Expires on <%= a_post.expires_on.strftime("%b %e, %Y") %>
+            </div>
+            <div class="card-body">
+              <%= a_post.body %>
+            </div>
+            <div class="card-footer">
+              Posted on <%= a_post.created_at.strftime("%b %e, %Y") %>
+            </div>
+          </div>
+        </div>
+      <% end %>
+      </div>
+    </div>
+  </div>
+
+  <div class="tab-content">
+    <div class="tab-pane fade" id="expired-posts" role="tabpanel" aria-labelledby="expired-tab" tabindex="0">
+      <table class="table table-hover table-striped table-bordered" border="1">
+        <tr>
+          <th>Title</th>
+          <th>Body</th>
+          <th>Posted on</th>
+          <th>Expired on</th>
+        </tr>
+
+        <% @expired_posts.each do |a_post| %>
+          <tr>
+            <td><%= a_post.title %></td>
+            <td><%= a_post.body %></td>
+            <td><%= a_post.created_at.strftime("%b %e, %Y") %></td>
+            <td><%= a_post.expires_on.strftime("%b %e, %Y") %></td>
+          </tr>
+        <% end %>
+      </table>
     </div>
   </div>
 </div>
-
-<table class="table table-striped" border="1">
-  <tr>
-    <th>Title</th>
-    <th>Body</th>
-    <th>Posted on</th>
-    <th>Expired on</th>
-  </tr>
-
-  <% @expired_posts.each do |a_post| %>
-    <tr>
-      <td><%= a_post.title %></td>
-      <td><%= a_post.body %></td>
-      <td><%= a_post.created_at.strftime("%b %e, %Y") %></td>
-      <td><%= a_post.expires_on.strftime("%b %e, %Y") %></td>
-    </tr>
-  <% end %>
-</table>
